<resources>
    <!-- Common -->
    <string name="app_name">HelloHappy</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">ZZINGOBOMI</string>
    <string name="nav_header_subtitle">zzingo5@naver.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_login">Login</string>
    <string name="action_logout">LogOut</string>

    <string name="common_navmenu_home">홈화면</string>
    <string name="common_navmenu_study">공부 시작</string>
    <string name="common_navmenu_manage">내 문장 관리</string>
    <string name="common_navmenu_ranking">순위표</string>
    <string name="common_navmenu_bymade">만든 사람</string>

    <string name="common_anonymous_name">Anonymous</string>
    <string name="common_already_login">이미 로그인 되어있습니다.</string>
    <string name="common_email_notauth">아직 이메일이 인증되지 않았습니다. 이메일을 인증해 주십시오.</string>
    <string name="common_logout_title">로그아웃</string>
    <string name="common_logout_content">정말 로그아웃 하시겠습니까?</string>
    <string name="common_need_login">로그인이 필요한 기능입니다.</string>
    <string name="common_wait_progress_title">잠시만 기다려 주십시오</string>
    <string name="common_wait_progress_content">Please wait....</string>

    <string name="common_impression_text">노출수</string>
    <string name="common_likebtn_text">좋아요</string>
    <string name="common_likecancelbtn_text">좋아요 취소</string>
    <string name="common_badbtn_text">신고하기</string>
    <string name="common_badcancelbtn_text">신고하기 취소</string>

    <string name="common_agree">확인</string>
    <string name="common_disagree">취소</string>

    <string name="common_modify_text">수정</string>
    <string name="common_modify_save_text">저장</string>
    <string name="common_modify_cancel_text">취소</string>
    <string name="common_delete_text">삭제</string>

    <string name="common_exit_title">Exit</string>
    <string name="common_exit_content">정말 종료하시겠습니까?</string>

    <!-- Home -->
    <string name="home_main_text">안녕하세요. ZZINGOBOMI 입니다.\n공부하기 기능은 바로 이용하실 수 있고\n문장 추가와 댓글은 회원가입을 이용해 주세요</string>

    <!-- Auth -->
    <string name="auth_email_create_title">Email 회원가입</string>
    <string name="auth_email_create_name">이름</string>
    <string name="auth_email_create_email">E-mail</string>
    <string name="auth_email_create_password">비밀번호</string>
    <string name="auth_email_create_photo">Photo Url</string>
    <string name="auth_email_create_regist">회원 가입</string>
    <string name="auth_email_create_thank">감사합니다.\n마지막으로 인증메일 받기를 누르고 이메일에서 인증을 완료해 주십시오.</string>
    <string name="auth_email_create_authmail">인증메일 받기</string>
    <string name="auth_email_create_login">로그인 하기</string>

    <string name="auth_email_login_title">Email 로그인</string>
    <string name="auth_email_login_email">E-mail</string>
    <string name="auth_email_login_password">비밀번호</string>
    <string name="auth_email_login_login">로그인</string>

    <string name="auth_login_title">로그인</string>
    <string name="auth_login_google">구글 로그인</string>
    <string name="auth_login_email">이메일 로그인</string>
    <string name="auth_login_create_email">이메일로 회원 가입</string>


    <!-- Study -->
    <string name="study_replyshowbtn_text">댓글 보기</string>
    <string name="study_reply_delete_title">댓글 삭제하기</string>
    <string name="study_reply_delete_content">댓글을 정말 삭제하시겠습니까?</string>

    <string name="study_reply_regdisplayname">작성자</string>
    <string name="study_reply_regdate">등록날짜</string>
    <string name="study_reply_content">내용</string>

    <string name="study_reply_create_content">댓글을 입력하세요</string>
    <string name="study_reply_create_btn">등록하기</string>
    <string name="study_reply_create_notlogin">로그인을 하셔야 댓글달기가 가능합니다</string>

    <!-- MyItemManage -->
    <string name="myitem_additem_kor_literal">한글 문장</string>
    <string name="myitem_additem_eng_literal">영어 문장</string>
    <string name="myitem_additem_addinfo_literal">부연 설명</string>
    <string name="myitem_additem_button_text">추가하기</string>
    <string name="myitem_additem_done_text">완료되었습니다.</string>

    <string name="myitem_manage_add">문장 추가하기</string>

    <string name="myitem_read_kor_literal">한국어</string>
    <string name="myitem_read_eng_literal">영어</string>
    <string name="myitem_read_addinfo_literal">부연 설명</string>

    <!-- Ranking -->
    <string name="rank_impression_title">노출수 순위</string>
    <string name="rank_like_title">좋아요 순위</string>
    <string name="rank_manyitem_title">문장개수 순위</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
