<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/common_navmenu_home" />
        <item
            android:id="@+id/nav_study"
            android:icon="@drawable/ic_menu_study"
            android:title="@string/common_navmenu_study" />
        <item
            android:id="@+id/nav_myitemmanage"
            android:icon="@drawable/ic_menu_myitemmanage"
            android:title="@string/common_navmenu_manage" />
        <item
            android:id="@+id/nav_ranking"
            android:icon="@drawable/ic_menu_ranking"
            android:title="@string/common_navmenu_ranking"/>
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_bymade"
                android:icon="@drawable/ic_menu_bymade"
                android:title="@string/common_navmenu_bymade" />
        </menu>
    </item>

</menu>
