<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/reply_idx"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/reply_account_photo"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="8dp"
                android:layout_gravity="start|top"
                android:contentDescription="@string/nav_header_desc"
                android:paddingTop="@dimen/nav_header_vertical_spacing"
                app:srcCompat="@mipmap/ic_launcher_round" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/reply_regdisplayname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/gray"
                    android:textSize="14sp"
                    android:text="@string/study_reply_regdisplayname"/>
                <TextView
                    android:id="@+id/reply_regdate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_reply_regdate"
                    android:drawablePadding="4dp"
                    android:textColor="@color/gray"
                    android:textSize="14sp"
                    android:text="@string/study_reply_regdate"/>
            </LinearLayout>

            <TextView
                android:id="@+id/reply_contents"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:minLines="3"
                android:textSize="14sp"
                android:layout_marginTop="8dp"
                android:visibility="visible"
                android:text="@string/study_reply_content"/>
            <EditText
                android:id="@+id/reply_contents_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:layout_marginTop="8dp"
                android:visibility="gone"/>


        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp">
        <TextView
            android:id="@+id/reply_modify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="8dp"
            android:textSize="14sp"
            android:text="@string/common_modify_text"/>
        <TextView
            android:id="@+id/reply_modify_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/reply_modify"
            android:layout_marginStart="24dp"
            android:textSize="14sp"
            android:visibility="gone"
            android:text="@string/common_modify_cancel_text"/>
        <TextView
            android:id="@+id/reply_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/reply_modify_cancel"
            android:layout_marginStart="24dp"
            android:textSize="14sp"
            android:text="@string/common_delete_text"/>

        <TextView
            android:id="@+id/bad_reply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@id/like_reply"
            android:layout_marginEnd="24dp"
            android:textSize="14sp"
            android:text="@string/common_badbtn_text"
            />
        <TextView
            android:id="@+id/like_reply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="8dp"
            android:textSize="14sp"
            android:text="@string/common_likebtn_text" />
    </RelativeLayout>

    <View
        android:background="@color/gray"
        android:layout_width="match_parent"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_height="2px"/>

</LinearLayout>