<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".auth.LoginFragment">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="4dp"
        app:cardElevation="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:cardPreventCornerOverlap="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >
            <!-- Header -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/auth_login_title"
                    android:textSize="24sp"
                    android:padding="8dp"
                    android:textColor="@color/white"
                    android:background="@color/colorPrimary" />
            </RelativeLayout>

            <!-- Content -->
            <Button
                android:id="@+id/sign_in_google"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_login_google"
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:layout_gravity="center"
                android:text="@string/auth_login_google" />

            <Button
                android:id="@+id/sign_in_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_login_email"
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:layout_gravity="center"
                android:text="@string/auth_login_email" />

            <View
                android:background="@color/black"
                android:layout_width="match_parent"
                android:layout_height="2px"/>

            <Button
                android:id="@+id/create_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:layout_gravity="center"
                android:text="@string/auth_login_create_email" />

        </LinearLayout>
    </android.support.v7.widget.CardView>
</android.support.constraint.ConstraintLayout>