<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/myitem_card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginEnd="16dp"
    android:layout_marginStart="16dp"
    android:layout_marginTop="16dp"
    app:cardCornerRadius="4dp"
    android:animateLayoutChanges="true"
    app:cardElevation="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/myitem_title_ko_literal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="0dp"
            android:layout_marginEnd="4dp"
            android:textSize="12sp"
            android:background="@color/light_grey"
            android:visibility="gone"
            android:text="@string/myitem_read_kor_literal"/>
        <TextView
            android:id="@+id/myitem_title_ko"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="8dp"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:paddingEnd="4dp"
            android:textSize="20sp"
            android:visibility="visible"
            android:text=""/>
        <EditText
            android:id="@+id/myitem_title_ko_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="8dp"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:paddingEnd="4dp"
            android:textSize="20sp"
            android:visibility="gone"
            android:text=""/>
        <TextView
            android:id="@+id/myitem_title_en_literal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="0dp"
            android:layout_marginEnd="4dp"
            android:textSize="12sp"
            android:background="@color/light_grey"
            android:visibility="gone"
            android:text="@string/myitem_read_eng_literal"/>
        <TextView
            android:id="@+id/myitem_title_en"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="8dp"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:paddingEnd="4dp"
            android:textSize="20sp"
            android:visibility="visible"
            android:text=""/>
        <EditText
            android:id="@+id/myitem_title_en_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="8dp"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:paddingEnd="4dp"
            android:textSize="20sp"
            android:visibility="gone"
            android:text=""/>
        <LinearLayout
            android:id="@+id/myitem_addinfo_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="0dp"
                android:layout_marginEnd="4dp"
                android:textSize="12sp"
                android:background="@color/light_grey"
                android:text="@string/myitem_read_addinfo_literal"/>
            <TextView
                android:id="@+id/myitem_addinfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="8dp"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"
                android:paddingEnd="4dp"
                android:textSize="12sp"
                android:minLines="3"
                android:visibility="visible"
                android:text=""/>
            <EditText
                android:id="@+id/myitem_addinfo_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="8dp"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"
                android:paddingEnd="4dp"
                android:textSize="12sp"
                android:minLines="3"
                android:visibility="gone"
                android:text=""/>
            <TextView
                android:id="@+id/myitem_regdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:paddingEnd="8dp"
                android:drawableStart="@drawable/ic_reply_regdate"
                android:text=""/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/myitem_social_info_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal"
            android:visibility="gone">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/myitem_card_read_impression"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textSize="24sp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:text=""/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/common_impression_text"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/myitem_card_read_like"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textSize="24sp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:text=""/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/common_likebtn_text"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/myitem_card_read_bad"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textSize="24sp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:text=""/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/common_badbtn_text"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/myitem_button_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">
            <View
                android:background="@color/black"
                android:layout_width="match_parent"
                android:layout_height="2px"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/myitemmodify_btn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    style="@style/Base.Widget.AppCompat.Button.Borderless"
                    android:drawableStart="@drawable/ic_study_comment"
                    android:layout_gravity="center"
                    android:text="@string/common_modify_text"/>
                <View
                    android:background="@color/black"
                    android:layout_width="2px"
                    android:layout_height="40dp"
                    android:layout_gravity="center"/>
                <LinearLayout
                    android:id="@+id/myitemmodify_cancel_btn_layout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:visibility="gone">
                    <Button
                        android:id="@+id/myitemmodify_cancel_btn"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        style="@style/Base.Widget.AppCompat.Button.Borderless"
                        android:drawableStart="@drawable/ic_study_comment"
                        android:layout_gravity="center"
                        android:text="@string/common_modify_cancel_text"/>
                    <View
                        android:background="@color/black"
                        android:layout_width="2px"
                        android:layout_height="40dp"
                        android:layout_gravity="center"/>
                </LinearLayout>
                <Button
                    android:id="@+id/myitemdelete_btn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    style="@style/Base.Widget.AppCompat.Button.Borderless"
                    android:drawableStart="@drawable/ic_study_like"
                    android:layout_gravity="center"
                    android:text="@string/common_delete_text"/>

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/myitem_list_bottom_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="visible">
            <View
                android:background="@color/light_grey"
                android:layout_width="match_parent"
                android:layout_height="2px"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/myitem_card_list_impression"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_myitem_impression"
                    android:layout_toStartOf="@id/myitem_card_list_like"
                    android:layout_marginEnd="8dp"
                    android:text="" />
                <TextView
                    android:id="@+id/myitem_card_list_like"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_myitem_like"
                    android:layout_toStartOf="@id/myitem_card_list_bad"
                    android:layout_marginEnd="8dp"
                    android:text="" />
                <TextView
                    android:id="@+id/myitem_card_list_bad"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_myitem_bad"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="8dp"
                    android:text="" />
            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>